# far-memory

./: .gitignore  Cargo.toml  README.md  build.rs  demo.sh  evaluation.json  evaluation.sh  setup.sh
.github/workflows/: ci.yml
cache-simulator/: Cargo.toml
cache-simulator/src/: main.rs
infrastructure/: userdata.sh
infrastructure/docker/: Dockerfile
infrastructure/k8s/: far-memory.yml
infrastructure/terraform/demo/: .gitignore  .terraform.lock.hcl  main.tf
proto/: far_memory.proto
src/: benchmark.rs  client.rs  config.rs  controller.rs  generate_data.rs  main.rs  memory_storage.rs  rpc.rs  utils.rs
src/client/: block_allocator.rs  block_map.rs  block_writer.rs  buffer.rs  buffered_vec.rs  byte_buffer.rs  client.rs  controller_client.rs  far_memory_client.rs  hashmap.rs  mod.rs  object.rs  serialized_object.rs  serialized_object_set.rs  serialized_object_vec.rs  span.rs  test_mode.rs  vec.rs
src/client/backend/: compression.rs  disk.rs  encryption.rs  erasure_coding.rs  in_memory.rs  metrics.rs  mod.rs  network_node.rs  network_sharding.rs  replication.rs
src/client/prefetching/: mod.rs
src/client/replacement/: lru.rs  mod.rs  replay.rs  rnn.rs  tracking.rs
src/demo/: benchmark.rs  block_device.rs  dataframe.rs  evaluation.rs  llm_inference.rs  mod.rs  simple.rs  web_service.rs
src/manager/: client.rs  mod.rs  protocol.rs
src/storage/: client.rs  mod.rs  protocol.rs
src/thesis/: context.rs  engine.rs  mod.rs  utils.rs
src/thesis/components/: abstract_section.rs  front_page.rs  image.rs  line.rs  markdown.rs  mod.rs  paragraph.rs  placeholder.rs  section_header.rs  task.rs  topic_card.rs  unordered_list.rs
src/thesis/content/: conference_abstract.rs  documentation.rs  mod.rs  topic_card.rs
src/thesis/content/thesis/: abstract_section.rs  applications.rs  mod.rs
src/thesis/content/thesis/main_section/: mod.rs  software.rs
src/thesis/content/thesis/main_section/evaluation/: mod.rs
src/thesis/content/thesis/main_section/marketing/: mod.rs
src/thesis/content/thesis/main_section/method/: components.rs  integration.rs  mod.rs  performance.rs  reliability.rs
src/thesis/content/thesis/main_section/research/: aifm.rs  carbink.rs  far_memory_in_warehouse_scale.rs  hydra.rs  mod.rs  rdma.rs
src/thesis/content/thesis/main_section/software/: mod.rs  requirements.rs  tools.rs
src/tools/: evaluation.rs  mod.rs  plots.rs  trace_analyzer.rs
src/utils/: allocator.rs  metrics.rs  mod.rs  performance.rs
thesis/: thesis.tex
thesis-rs/: .gitignore  Cargo.toml  README.md  thesis.tex
thesis-rs/src/: content.rs  context.rs  engine.rs  main.rs
thesis-rs/src/components/: abstract_section.rs  image.rs  line.rs  markdown.rs  mod.rs  page_break.rs  paragraph.rs  placeholder.rs  section_header.rs  task.rs  test_component.rs  topic_card.rs  unordered_list.rs
thesis-rs/src/content/: documentation.rs  main.rs  mod.rs  topic_card.rs
thesis-rs/src/content/thesis/: main_section.rs  mod.rs
thesis-rs/src/content/thesis/main_section/: mod.rs  research.rs
thesis-rs/src/content/thesis/main_section/research/: aifm.rs  carbink.rs  far_memory_in_warehouse_scale.rs  hydra.rs  mod.rs  rdma.rs
thesis-rs/src/documents/: mod.rs  thesis.rs  topic_card.rs
thesis-rs/src/sections/: abbreviations.rs  abstract_section.rs  conclusions.rs  front_page.rs  intro.rs  main.rs  mod.rs  references.rs  table_of_contents.rs  task.rs
