[package]
name = "far-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
vblk = "0.1.2"
toml = "0.7.6"
serde = { version = "1.0.179", features = ["derive"] }
bincode = "1.3.3"
html-escape = "0.2.13"
clap = { version = "4.3.21", features = ["derive"] }
markdown = "0.3.0"
lopdf = "0.31.0"
image = "0.24.7"

# supports tab leader customization for table of contents, see https://github.com/bokuweb/docx-rs/issues/652
# also supports sections for paragraphs (for example, to have paragraphs with multiple columns), see https://github.com/bokuweb/docx-rs/issues/664
docx-rs = { git = "https://github.com/nikitavbv/docx-rs" }

thiserror = "1.0.48"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
quantiles = "0.7.1"
tracing-chrome = "0.7.1"
ctrlc = "3.4.1"
crossbeam = "0.8.2"
serde_json = "1.0.107"
reed-solomon-erasure = "6.0.0"
prometheus = "0.13.3"
reqwest = { version = "0.11.22", features = ["blocking"] }
hostname = "0.3.1"
serde_bytes = "0.11.12"
aes-gcm = "0.10.3"
lz4 = "1.24.0"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
itertools = "0.12.0"
snap = "1.1.1"
indicatif = "0.17.7"
