[package]
name = "thesis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = { git = "https://github.com/nikitavbv/docx-rs" } # supports tab leader customization for table of contents, see https://github.com/bokuweb/docx-rs/issues/652
clap = { version = "4.3.21", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"