[package]
name = "thesis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = { git = "https://github.com/nikitavbv/docx-rs" } # supports tab leader customization for table of contents, see https://github.com/bokuweb/docx-rs/issues/652
clap = { version = "4.3.21", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
image = "0.24.7"
markdown = "0.3.0"
html-escape = "0.2.13"
lopdf = "0.31.0"
anyhow = "1.0.75"
thiserror = "1.0.48"